# KIOKU

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  cspell.config.yaml
crates/evaluate/: Cargo.toml
crates/evaluate/docs/: KIOKU-LoCoMo-evaludation.md  KIOKU-LongMemEval-evaludation.md  LoCoMo-evaluation.md
crates/evaluate/docs/done/: phase5.6.md  refactoring.md
crates/evaluate/docs/eval-phase1.5/: plan.md
crates/evaluate/docs/eval-phase2/: plan.md
crates/evaluate/docs/eval-phase4/: plan.md
crates/evaluate/docs/eval-phase5/: plan.md
crates/evaluate/docs/eval-phase5.5/: plan.md
crates/evaluate/src/: lib.rs  token_counter.rs
crates/evaluate/src/answerer/: debug.rs  llm.rs  mod.rs  prompt.rs  rig_openai.rs  traits.rs
crates/evaluate/src/backend/: mod.rs  return_all.rs  traits.rs
crates/evaluate/src/benchmarks/: mod.rs
crates/evaluate/src/cli/: evaluate.rs  mod.rs
crates/evaluate/src/common/: mod.rs
crates/evaluate/src/config/: metadata.rs  mod.rs  resolve.rs  run.rs  test_support.rs  toml.rs  types.rs  validate.rs
crates/evaluate/src/datasets/: locomo.rs  longmemeval.rs  mod.rs
crates/evaluate/src/judge/: locomo.rs  locomo_kioku.rs  longmemeval.rs  longmemeval_kioku.rs  mod.rs  openai_compatible.rs  traits.rs
crates/evaluate/src/model/: answer.rs  benchmark.rs  metrics.rs  mod.rs  retrieval.rs
crates/evaluate/src/prompt/: answer.rs  builder.rs  context.rs  mod.rs  prepared.rs
crates/evaluate/src/runner/: helpers.rs  locomo_kioku.rs  longmemeval_kioku.rs  metrics.rs  mod.rs  output.rs  pipeline.rs  policy.rs  protocol.rs  result.rs
(+32 files in other folders)
