[package]
name = "evaluate"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4.5", features = ["derive"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[[bin]]
name = "locomo"
path = "src/bin/locomo.rs"

[[bin]]
name = "longmemeval"
path = "src/bin/longmemeval.rs"

[[bin]]
name = "evaluate"
path = "src/bin/evaluate.rs"
